# backend/dto/Quiz.go
@@ -4,7 +4,7 @@ type QuizCreateForm struct {
 	QuizTitle string `json:"quiz_title" example:"퀴즈 문제"`
 	QuizContent string `json:"quiz_content" example:"퀴즈 렌더링 정보"`
 	QuizAnswer string `json:"quiz_answer" example:"퀴즈 정답"`
-	QuizType string `json:"quiz_type" example:"퀴즈 타입(객관식, 주관식)"`
+	QuizType string `json:"quiz_type" example:"퀴즈 타입(MULTI 혹은 SIMPLE)"`
 }
 
 type QuizGetForm struct {
@@ -12,10 +12,10 @@ type QuizGetForm struct {
 	QuizTitle string `json:"quiz_title" example:"퀴즈 문제"`
 	QuizContent string `json:"quiz_content" example:"퀴즈 렌더링 정보"`
 	QuizAnswer string `json:"quiz_answer" example:"퀴즈 정답"`
-	QuizType string `json:"quiz_type" example:"퀴즈 타입(객관식, 주관식)"`
+	QuizType string `json:"quiz_type" example:"퀴즈 타입(MULTI 혹은 SIMPLE)"`
 }
 
 type QuizAnswerWithScore struct {
-	QuizAnswer string `json:"quiz_answer"`
-	QuizScore uint64 `json:"quiz_score"`
+	QuizAnswer string `db:"quiz_answer" json:"quiz_answer"`
+	QuizScore uint64 `db:"quiz_score" json:"quiz_score"`
 }
